# django-richenum

./: AUTHORS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  python-version-tests.yml
tests/: run_tests.py
